# aesir

./: Cargo.toml  README.md
src/: actuator.rs  ecp_geometry.rs  encephalon.rs  lib.rs  neuron.rs  neuron_interfaces.rs  reflex.rs  sensor.rs
src/ecp_geometry/: ecp_tests.rs
src/encephalon/: encephalon_tests.rs
src/neuron/: neuron_tests.rs
