[package]
name = "aesir"
version = "0.1.0"
authors = ["Danny Student <dannygeisz@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"


[dependencies]
indexmap = "1.6.0"
rand = "0.7.3"